# rag_chatbot

./: AGENTS.md  README.md  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
src/ragbot/: app.py  config.py  duckrag.py  file_manager.py  llm.py  local_rag.py  rag.py  router.py  schemas.py  web_rag.py
