[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Local RAG chatbot (Chainlit + LlamaIndex + DuckDuckGo Ollama-Models using OpenAI-API)"
requires-python = ">=3.10"

dependencies = [
  "chainlit==2.9.6",
  "ddgs==9.10.0",
  "httpx==0.28.1",
  "langgraph==1.0.10",
  "llama-index==0.14.15",
  "llama-index-readers-web==0.5.6",
  "llama-index-retrievers-bm25==0.6.5",
  "ollama==0.6.1",
  "openai==2.24.0",
  "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-mock==3.15.1",
]
